# x2feishu-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/x2feishu_monitor/: __init__.py  __main__.py  app.py  clients.py  config.py  models.py  service.py  state.py  translation.py
tests/: __init__.py  test_monitor.py
