[project]
name = "x2feishu-monitor"
version = "0.1.0"
description = "轮询 X 用户新帖子并推送到飞书群机器人"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5,<3",
]

[project.scripts]
x2feishu-monitor = "x2feishu_monitor.app:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true
